--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,29 @@
 			<groupId>org.nightlabs</groupId>
 			<artifactId>org.nightlabs.xml</artifactId>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>
+		
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+			<scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+			<scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+			<scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-		<outputDirectory>bin</outputDirectory>
+		<outputDirectory>build/classes</outputDirectory>
 		<resources>
 			<resource>
 				<directory>src</directory>
@@ -67,6 +84,22 @@
 			</resource>
 		</resources>
 
-
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <Web-ContextPath>/JFireWebAdmin</Web-ContextPath>
+                        <Private-Package>org.nightlabs.jfire.web.admin.*</Private-Package>
+                        <Import-Package>
+                            javax.servlet*;version=2.5,
+                            *
+                        </Import-Package>
+                        <_wab>WebContent/</_wab>
+                   </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 </project>
