--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 		</dependency>
 		<dependency>
 		    <groupId>javax.jdo</groupId>
-		    <artifactId>jdo2-api</artifactId>
+		    <artifactId>jdo-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -101,7 +101,11 @@
 				</excludes>
 			</resource>
 		</resources>
-
-
+		<plugins>
+			<plugin>
+				<groupId>org.datanucleus</groupId>
+				<artifactId>maven-datanucleus-plugin</artifactId>
+			</plugin>
+		</plugins>
 	</build>
 </project>
