--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 		</dependency>
 		<dependency>
 		    <groupId>javax.jdo</groupId>
-		    <artifactId>jdo2-api</artifactId>
+		    <artifactId>jdo-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -70,8 +70,8 @@
 				</excludes>
 			</resource>
 		</resources>
-		<!-- FIXME the package names should be fixed (?). -->
 		<plugins>
+			<!-- FIXME the package names should be fixed (?). -->
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
