--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.jdo</groupId>
-			<artifactId>jdo2-api</artifactId>
+			<artifactId>jdo-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -103,8 +103,8 @@
 			</resource>
 		</resources>
 
-		<!-- FIXME the package name should be fixed (?). -->
 		<plugins>
+			<!-- FIXME the package name should be fixed (?). -->
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -118,6 +118,10 @@
 						<Export-Package>org.nightlabs.jfire.*;version="${project.version}"</Export-Package>
 					</instructions>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.datanucleus</groupId>
+				<artifactId>maven-datanucleus-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
