--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 		</dependency>
 		<dependency>
 		    <groupId>javax.jdo</groupId>
-		    <artifactId>jdo2-api</artifactId>
+		    <artifactId>jdo-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -135,8 +135,8 @@
 				</excludes>
 			</resource>
 		</resources>
-		<!-- FIXME the package names should be fixed (?). -->
 		<plugins>
+			<!-- FIXME the package names should be fixed (?). -->
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -151,6 +151,10 @@
 						</Export-Package>
 					</instructions>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.datanucleus</groupId>
+				<artifactId>maven-datanucleus-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
