--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 		
 		<dependency>
 			<groupId>javax.jdo</groupId>
-			<artifactId>jdo2-api</artifactId>
+			<artifactId>jdo-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -75,8 +75,8 @@
 				</excludes>
 			</resource>
 		</resources>
-		<!-- FIXME the package name should be fixed (?). Collides with org.nightlabs.jdo -->
 		<plugins>
+			<!-- FIXME the package name should be fixed (?). Collides with org.nightlabs.jdo -->
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -89,6 +89,10 @@
 						<Export-Package>org.nightlabs.jfire.base.*;version="${project.version}"</Export-Package>
 					</instructions>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.datanucleus</groupId>
+				<artifactId>maven-datanucleus-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
