--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,22 @@
 		<artifactId>org.nightlabs.jfire.parent</artifactId>
 		<version>1.2.0-SNAPSHOT</version>
 	</parent>
+	
+	<build>	
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.4</version>
+				<extensions>true</extensions>
+				<inherited>true</inherited>
+				<configuration>
+					<instructions>
+						<!-- SPECIAL CASE HERE as the we need to define a main class -->
+						<Main-Class>org.nightlabs.jfire.serverupdate.launcher.ServerUpdater</Main-Class>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
