--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,13 @@
 			<groupId>args4j</groupId>
 			<artifactId>args4j</artifactId>
 			<version>2.0.16</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	
 	<build>	
 		<plugins>
+<!-- 		
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
@@ -33,11 +35,36 @@
 				<inherited>true</inherited>
 				<configuration>
 					<instructions>
-						<!-- SPECIAL CASE HERE as the we need to define a main class -->
+						SPECIAL CASE HERE as the we need to define a main class 
 						<Main-Class>org.nightlabs.jfire.serverupdate.launcher.ServerUpdater</Main-Class>
 					</instructions>
 				</configuration>
 			</plugin>
+-->
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.1</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>org.nightlabs.jfire.serverupdate.launcher.ServerUpdater</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
 		</plugins>
 	</build>
 </project>
