--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<version>2.2.2.SP8</version>
 		</dependency>
 		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jbosssx-client</artifactId>
+			<version>4.2.3.GA</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
