--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<dependency>
 			<groupId>org.nightlabs.jfire</groupId>
 			<artifactId>org.nightlabs.jfire.servermanager</artifactId>
+			<type>rar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.nightlabs.jfire</groupId>
@@ -128,6 +129,9 @@
 				<artifactId>maven-ear-plugin</artifactId>
 				<configuration>
 					<earSourceDirectory>target/application</earSourceDirectory>
+					<artifactTypeMappings>
+						<artifactTypeMapping type="jar" mapping="ejb" />
+					</artifactTypeMappings>
 					<version>5</version>
 					<modules>
 						<rarModule>
