--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nightlabs.jfire</groupId>
-	<artifactId>org.nightlabs.initialisejdo</artifactId>
+	<artifactId>org.nightlabs.jfire.initialisejdo</artifactId>
 	<version>1.2.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>${project.artifactId}</name>
