--- a/pom.xml
+++ b/pom.xml
@@ -364,6 +364,11 @@
 				<artifactId>jsr250-api</artifactId>
 				<version>1.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-all</artifactId>
+				<version>1.2</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
